--- a/vignettes/installation.Rmd
+++ b/vignettes/installation.Rmd
@@ -42,7 +42,7 @@ knitr::opts_chunk$set(
 
 ```R
  install.packages("usethis")  # if not already installed
- usethis::edit_r_environ()`
+ usethis::edit_r_environ()
 ```
 
   + This opens the `.Renviron` file.
